Changes in .gitignore
Correct hibernate configuration ignore
Add out/ and target/ directories
Add comments to ignores

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
+# Idea project files
 .idea/*
-main/resources/*
+
+# Project compile output
+out/*
+target/*
+
+# Hibernate configuration
+src/main/resources/hibernate.cfg.xml
