--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
   <groupId>ru.bepis</groupId>
   <artifactId>internet-apps-lab3</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <packaging>war</packaging>
+  <name>Lab 3</name>
+  <url>http://maven.apache.org</url>
 
   <dependencies>
     <dependency>
