--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,7 +18,7 @@
   </context-param>
 
   <welcome-file-list>
-    <welcome-file>faces/home.xhtml</welcome-file>
+    <welcome-file>start.xhtml</welcome-file>
   </welcome-file-list>
 
   <servlet>
