Fixed CSS & Navigation

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,13 @@
     </dependency>
 
     <dependency>
+      <groupId>net.bootsfaces</groupId>
+      <artifactId>bootsfaces</artifactId>
+      <version>1.4.1</version>
+      <scope>compile</scope>
+    </dependency>
+
+    <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
       <version>42.2.5</version>
