--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,11 @@
       <artifactId>jsf-impl</artifactId>
       <version>2.1.7</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.primefaces</groupId>
+      <artifactId>primefaces</artifactId>
+      <version>6.0</version>
+    </dependency>
     <dependency>
       <groupId>net.bootsfaces</groupId>
       <artifactId>bootsfaces</artifactId>
