--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ target/*
 # Hibernate configuration
 src/main/resources/hibernate.cfg.xml
 src/main/resources/log4j.properties
+src/main/resources/log4j2.xml
