--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
       <artifactId>primefaces</artifactId>
       <version>6.0</version>
     </dependency>
+    <dependency>
+      <groupId>net.bootsfaces</groupId>
+      <artifactId>bootsfaces</artifactId>
+      <version>1.1.3</version>
+      <scope>compile</scope>
+    </dependency>
 
     <dependency>
       <groupId>org.postgresql</groupId>
