Perform project-scoped and code style changes
Unify .gitignore path of hibernate.cfg.xml
Remove internet-apps-lab3.iml
Perform fixes in RequestRepositoryTests
Uncomment PointValidatorTests
Rename util/ to utils/

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,4 @@ out/*
 target/*
 
 # Hibernate configuration
-src/main/resources/hibernate.cfg.xml
-src/main/resources/log4j.properties
-src/main/resources/log4j2.xml
+*/*/*/hibernate.cfg.xml
